--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ img {
 }
 
 body {
-    background-image: url('/img/imagenfondo.jpg');
+    background-image: url('/img/imagenfondo.png');
     background-size: cover;
     background-position: center;
     color: white;
